[package]
name = "rust-win"
version = "2.1.2"
edition = "2021"
authors = [ "Lut99" ]
description = "A winit-based, ash-compatible Window implementation in Rust. Builds on the `rust-vk` crate as a more convenient wrapper for ash."


[dependencies]
log = { version = "0.4.16", optional = true }
rust-vk = { git = "https://github.com/Lut99/rust-vk", tag = "v2.0.2", features = ["winit"] }
serde = { version = "1.0.136", features = ["derive"], optional = true }
winit = "0.26"


[features]
log = [ "dep:log", "rust-vk/log" ]
